--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -231,7 +231,12 @@
                     "auto_state_change_active_or_busy": "Занят",
                     "auto_state_change_join_me_or_ask_me": "Присоединяйтесь к мне / Спросить меня",
                     "auto_state_change_join_me_or_busy": "Присоединиться к мне / Занят",
-                    "auto_state_change_ask_me_or_busy": "Спросить меня / Занят"
+                    "auto_state_change_ask_me_or_busy": "Спросить меня / Занят",
+                    "auto_invite_request_accept": "Автоматическое принятие запросов на приглашение",
+                    "auto_invite_request_accept_tooltip": "Автоматически принимать запросы на приглашение от избранных друзей",
+                    "auto_invite_request_accept_off": "Отключено",
+                    "auto_invite_request_accept_favs": "Все избранные",
+                    "auto_invite_request_accept_selected_favs": "Выбранные избранные"
                 },
                 "legal_notice": {
                     "header": "Правовая информация",
@@ -424,9 +429,10 @@
                         "avatar_database_provider": "Провайдер базы данных аватаров"
                     },
                     "youtube_api": {
-                        "header": "Youtube API",
+                        "header": "YouTube API",
                         "enable": "Включить",
-                        "youtube_api_key": "API ключ YouTube"
+                        "youtube_api_key": "API ключ YouTube",
+                        "enable_tooltip": "Получает названия видео для использования с gameLog и длительность для наложения прогресс-бара"
                     },
                     "video_progress_pie": {
                         "header": "Наложение диаграммы прогресса для видео",
