--- a/html/src/localization/es/en.json
+++ b/html/src/localization/es/en.json
@@ -231,7 +231,12 @@
                     "auto_state_change_active_or_busy": "Activo / No molestar",
                     "auto_state_change_join_me_or_ask_me": "Join Me / Pregúntame",
                     "auto_state_change_join_me_or_busy": "Join Me / No molestar",
-                    "auto_state_change_ask_me_or_busy": "Pregúntame / No molestar"
+                    "auto_state_change_ask_me_or_busy": "Pregúntame / No molestar",
+                    "auto_invite_request_accept": "Auto Accept Invite Requests",
+                    "auto_invite_request_accept_tooltip": "Automatically accept invite requests from favorite friends",
+                    "auto_invite_request_accept_off": "Off",
+                    "auto_invite_request_accept_favs": "All Favorites",
+                    "auto_invite_request_accept_selected_favs": "Selected Favorites"
                 },
                 "legal_notice": {
                     "header": "Aviso Legal",
@@ -424,9 +429,10 @@
                         "avatar_database_provider": "Proveedor de base de datos de avatares"
                     },
                     "youtube_api": {
-                        "header": "API de Youtube",
+                        "header": "API de YouTube",
                         "enable": "Habilitar",
-                        "youtube_api_key": "Clave de la API de YouTube"
+                        "youtube_api_key": "Clave de la API de YouTube",
+                        "enable_tooltip": "Fetches video titles for use with gameLog and duration for overlay progress bar"
                     },
                     "video_progress_pie": {
                         "header": "Overlay de barra de progreso circular para videos",
@@ -715,7 +721,7 @@
                 "copy_id": "Copiar ID",
                 "copy_url": "Copiar URL",
                 "copy_name": "Copiar nombre",
-                "youtube_preview": "Vista previa de Youtube",
+                "youtube_preview": "Vista previa de YouTube",
                 "author_tags": "Etiquetas del autor",
                 "players": "Jugadores",
                 "favorites": "Favoritos",
