--- a/html/src/localization/ja/en.json
+++ b/html/src/localization/ja/en.json
@@ -219,7 +219,8 @@
                 },
                 "game_log": {
                     "header": "ゲームログ",
-                    "resource_load": "Udonのリソース負荷を記録"
+                    "resource_load": "Udonのリソース負荷を記録",
+                    "empty_avatar": "フィードにアバターを名前なしで記録"
                 },
                 "automation": {
                     "header": "オートメーション",
@@ -230,7 +231,12 @@
                     "auto_state_change_active_or_busy": "Active / Busy",
                     "auto_state_change_join_me_or_ask_me": "Join Me / Ask Me",
                     "auto_state_change_join_me_or_busy": "Join Me / Busy",
-                    "auto_state_change_ask_me_or_busy": "Ask Me / Busy"
+                    "auto_state_change_ask_me_or_busy": "Ask Me / Busy",
+                    "auto_invite_request_accept": "招待リクエストを自動許可",
+                    "auto_invite_request_accept_tooltip": "お気に入りに入れているフレンドからの招待リクエストを自動的に許可する",
+                    "auto_invite_request_accept_off": "オフ",
+                    "auto_invite_request_accept_favs": "全てのお気に入り",
+                    "auto_invite_request_accept_selected_favs": "お気に入りを選択"
                 },
                 "legal_notice": {
                     "header": "法律上の注意事項",
@@ -255,6 +261,7 @@
                     "theme_mode_pink": "ピンク",
                     "theme_mode_material3": "Material 3",
                     "vrcplus_profile_icons": "VRC+ プロフィールアイコン",
+                    "zoom": "ズーム",
                     "disable_tooltips": "ツールチップを無効化",
                     "disable_nicknames": "メモニックネームを無効化",
                     "sort_favorite_by": "お気に入りを並び替え:",
@@ -425,7 +432,8 @@
                     "youtube_api": {
                         "header": "Youtube API",
                         "enable": "有効化",
-                        "youtube_api_key": "Youtube APIキー"
+                        "youtube_api_key": "Youtube APIキー",
+                        "enable_tooltip": "ゲームログ用に動画のタイトルと、オーバーレイ用に動画の長さを取得する"
                     },
                     "video_progress_pie": {
                         "header": "動画のプログレスをオーバーレイ表示",
@@ -571,6 +579,7 @@
                 "edit_status": "ソーシャルステータスを変更",
                 "edit_language": "言語を変更",
                 "edit_bio": "自己紹介を変更",
+                "edit_pronouns": "代名詞",
                 "report_hacking": "ハッキングを通報",
                 "unfriend": "フレンド解除",
                 "logout": "ログアウト"
@@ -663,7 +672,7 @@
             "tags": {
                 "public": "パブリック",
                 "private": "プライベート",
-                "avatar_scaling_disabled": "Avatar Scaling 使用不可",
+                "avatar_scaling_disabled": "アバタースケーリング 使用不可",
                 "future_proofing": "Future Proofing",
                 "labs": "ラボ",
                 "cache": "キャッシュ",
@@ -923,6 +932,11 @@
             "bio_placeholder": "自己紹介を入力してください。",
             "add_link": "リンクを追加",
             "update": "更新"
+        },
+        "pronouns": {
+            "header": "Pronouns",
+            "pronouns_placeholder": "Please input your pronouns",
+            "update": "Update"
         },
         "new_instance": {
             "header": "新しいインスタンス",
