--- a/html/src/localization/es/en.json
+++ b/html/src/localization/es/en.json
@@ -229,14 +229,14 @@
                     "auto_state_change_off": "Desactivado",
                     "auto_state_change_active_or_ask_me": "Activo / Pregúntame",
                     "auto_state_change_active_or_busy": "Activo / Ocupado",
-                    "auto_state_change_join_me_or_ask_me": "Join Me / Pregúntame",
-                    "auto_state_change_join_me_or_busy": "Join Me / No molestar",
+                    "auto_state_change_join_me_or_ask_me": "Únete a mí / Pregúntame",
+                    "auto_state_change_join_me_or_busy": "Únete a mí / Ocupado",
                     "auto_state_change_ask_me_or_busy": "Pregúntame / Ocupado",
-                    "auto_invite_request_accept": "Auto Accept Invite Requests",
-                    "auto_invite_request_accept_tooltip": "Automatically accept invite requests from favorite friends",
-                    "auto_invite_request_accept_off": "Off",
-                    "auto_invite_request_accept_favs": "All Favorites",
-                    "auto_invite_request_accept_selected_favs": "Selected Favorites"
+                    "auto_invite_request_accept": "Aceptar solicitudes de invitación automáticamente",
+                    "auto_invite_request_accept_tooltip": "Acepta automáticamente las solicitudes de invitación de tus amigos favoritos",
+                    "auto_invite_request_accept_off": "Desactivado",
+                    "auto_invite_request_accept_favs": "Todos los favoritos",
+                    "auto_invite_request_accept_selected_favs": "Favoritos seleccionados"
                 },
                 "legal_notice": {
                     "header": "Aviso Legal",
@@ -433,7 +433,7 @@
                         "header": "API de YouTube",
                         "enable": "Habilitar",
                         "youtube_api_key": "Clave de la API de YouTube",
-                        "enable_tooltip": "Fetches video titles for use with gameLog and duration for overlay progress bar"
+                        "enable_tooltip": "Obtiene títulos de vídeo para utilizarlos con gameLog y la duración de la barra de progreso superpuesta"
                     },
                     "video_progress_pie": {
                         "header": "Overlay de barra de progreso circular para videos",
@@ -913,9 +913,9 @@
         "invite": {
             "header": "Invitar",
             "select_placeholder": "Elegir amigos",
-            "add_self": "Add Self",
+            "add_self": "Añadir uno mismo",
             "add_friends_in_instance": "Añadir amigos en la instancia",
-            "add_favorite_friends": "Add Favorite Friends",
+            "add_favorite_friends": "Añadir amigos favoritos",
             "invite_with_message": "Invitar con un mensaje",
             "invite": "Invitar",
             "friends_in_instance": "Amigos en la instancia"
