Update ru_RU localization

--- a/html/src/localization/ru/en.json
+++ b/html/src/localization/ru/en.json
@@ -1372,7 +1372,7 @@
             "header": "Буп",
             "emoji_manager": "Менеджер эмодзи",
             "select_emoji": "Выберите Эмодзи",
-            "my_emojis": "Мои эмодзи",
+            "my_emojis": "Мои Эмодзи",
             "default_emojis": "Стандартные Эмодзи",
             "cancel": "Отмена",
             "send": "Отправить"
