--- a/html/src/localization/en/en.json
+++ b/html/src/localization/en/en.json
@@ -94,7 +94,7 @@
             },
             "avatars": {
                 "header": "Avatars",
-                "local_favorites": "Local Favorites",
+                "local_favorites": "Local Favorites (VRC+ exclusive)",
                 "new_group": "New Group"
             },
             "bulk_unfavorite_mode": "Bulk Unfavorite Mode",
@@ -914,7 +914,8 @@
         "favorite": {
             "header": "Choose Group",
             "vrchat_favorites": "VRChat Favorites",
-            "local_favorites": "Local Favorites"
+            "local_favorites": "Local Favorites",
+            "local_avatar_favorites": "Local Favorites (VRC+ exclusive)"
         },
         "invite": {
             "header": "Invite",
